# Invoice-Processing-Pipeline

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  test.py
alembic/: env.py
alembic/versions/: 120c759fb68a_create_documents_table.py  148ec5e37e4d_add_document_extractions.py  66fc044033b8_create_document_extractions_table.py  a08c57761de7_make_timestamps_timezone_aware.py  fa62a4784943_create_document_extractions_table.py
app/: routes.py
app/api/: router.py
app/common/: enums.py  exceptions.py
app/common/interfaces/: llm.py  ocr.py  repository.py  storage.py
app/core/: config.py  lifespan.py  logging.py
app/db/: models.py  session.py  uow.py
app/dependencies/: database.py  document.py
app/document/: model.py  repository.py  router.py  schema.py  service.py
app/document_extraction/: model.py  repository.py
app/extraction/: model.py  repository.py  schema.py  service.py
app/integrations/llm/: gemini_provider.py  prompts.py
app/integrations/ocr/: pdfplumber_provider.py
app/integrations/pdf_renderer/: pymupdf_renderer.py
app/jobs/: asyncio_dispatcher.py  dispatcher.py
app/models/: document.py
app/pipeline/: context.py  pipeline.py
app/pipeline/stages/: address.py  base.py  extraction.py  ocr.py  pdf.py  persistence.py  render.py  validation.py
app/processing/: pipeline.py
app/processing/stages/: ocr.py  pdf.py
app/storage/: local_storage.py
app/workers/: document_worker.py
